# django-fqq

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  tests.yml
django_fqq/: apps.py  middleware.py  schema.py
django_fqq/backend/: base.py  operations.py
tests/: conftest.py  test_apps.py  test_integration.py  test_middleware.py  test_migrations.py  test_operations.py  test_queries.py  test_schema.py
