[project]
name = "django-fqq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2",
]

[dependency-groups]
dev = [
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "psycopg>=3.3.3",
    "pytest>=8.0",
    "pytest-django>=4.9",
    "tox>=4.49.0",
    "tox-uv>=1.33.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
